# realtime-subtitle-translator

./: .gitignore  LICENSE  README.md  check_env.py  debug_api.py  debug_main.py  env.example  main.py  prd.md  pyproject.toml  requirements.txt  setup.sh  setup_with_uv.sh  start_uv.sh  test_api.py  test_translation.py
bug_fixes/: README.md  check_main_env.py  debug_key.py  verify_key.py
src/: audio_capture.py  subtitle_overlay.py  transcription.py  translation.py
