[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-subtitle-translator"
version = "0.1.0"
description = "Real-time English to Chinese subtitle translation tool for macOS"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "openai>=1.12.0",
    "numpy>=1.24.3",
    "sounddevice>=0.4.6",
    "scipy>=1.11.4",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pynput>=1.7.6",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "black>=23.12.1",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
realtime-translator = "main:main"

[project.urls]
Homepage = "https://github.com/your-username/realtime-subtitle-translator"
Repository = "https://github.com/your-username/realtime-subtitle-translator"
Issues = "https://github.com/your-username/realtime-subtitle-translator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
